// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VacmanBackground > should render vacman background component > expected html 1`] = `
<div>
  <div
    class="flex text-white"
  >
    <div
      class="my-8"
    >
      vacman background
    </div>
    <div
      class="absolute left-0 -z-10 w-full bg-[rgba(9,28,45,1)] bg-[url('/VacMan-design-element-06.svg')] bg-size-[450px] bg-left-bottom bg-no-repeat scale-x-[1] scale-y-[-1]"
      role="presentation"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none invisible container touch-none py-8 select-none focus:outline-none"
        tabindex="-1"
      >
        vacman background
      </div>
    </div>
  </div>
</div>
`;

exports[`VacmanBackground > should render vacman background component with bottom-left variant > expected html 1`] = `
<div>
  <div
    class="flex text-white"
  >
    <div
      class="my-8"
    >
      bottom-left
    </div>
    <div
      class="absolute left-0 -z-10 w-full bg-[rgba(9,28,45,1)] bg-[url('/VacMan-design-element-06.svg')] bg-size-[450px] bg-left-bottom bg-no-repeat scale-x-[1] scale-y-[1]"
      role="presentation"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none invisible container touch-none py-8 select-none focus:outline-none"
        tabindex="-1"
      >
        bottom-left
      </div>
    </div>
  </div>
</div>
`;

exports[`VacmanBackground > should render vacman background component with bottom-right variant > expected html 1`] = `
<div>
  <div
    class="flex text-white"
  >
    <div
      class="my-8"
    >
      bottom-right
    </div>
    <div
      class="absolute left-0 -z-10 w-full bg-[rgba(9,28,45,1)] bg-[url('/VacMan-design-element-06.svg')] bg-size-[450px] bg-left-bottom bg-no-repeat scale-x-[-1] scale-y-[1]"
      role="presentation"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none invisible container touch-none py-8 select-none focus:outline-none"
        tabindex="-1"
      >
        bottom-right
      </div>
    </div>
  </div>
</div>
`;

exports[`VacmanBackground > should render vacman background component with top-left variant > expected html 1`] = `
<div>
  <div
    class="flex text-white"
  >
    <div
      class="my-8"
    >
      top-left
    </div>
    <div
      class="absolute left-0 -z-10 w-full bg-[rgba(9,28,45,1)] bg-[url('/VacMan-design-element-06.svg')] bg-size-[450px] bg-left-bottom bg-no-repeat scale-x-[1] scale-y-[-1]"
      role="presentation"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none invisible container touch-none py-8 select-none focus:outline-none"
        tabindex="-1"
      >
        top-left
      </div>
    </div>
  </div>
</div>
`;

exports[`VacmanBackground > should render vacman background component with top-right variant > expected html 1`] = `
<div>
  <div
    class="flex text-white"
  >
    <div
      class="my-8"
    >
      top-right
    </div>
    <div
      class="absolute left-0 -z-10 w-full bg-[rgba(9,28,45,1)] bg-[url('/VacMan-design-element-06.svg')] bg-size-[450px] bg-left-bottom bg-no-repeat scale-x-[-1] scale-y-[-1]"
      role="presentation"
    >
      <div
        aria-hidden="true"
        class="pointer-events-none invisible container touch-none py-8 select-none focus:outline-none"
        tabindex="-1"
      >
        top-right
      </div>
    </div>
  </div>
</div>
`;
